feat: Crete SystemEnvReader to use System.getenv